Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27512 Qt 5 Documentation Issues (Meta Bug)
  3. QTBUG-27695

Fix documentation bugs in the 'newdocs' branches

XMLWordPrintable

      Qt repositories have a 'newdocs' branch which contains fixes to the documentation which will break the documentation for Beta 2.

      These changes probably introduce breakages and regressions. These must be fixed.

      1) Landing page for the online snapshot should use the 'online' CSS. For the SDK package, the 'offline' should be used.

      2) All Classes page doesn't show all classes.

      Snapshot: http://doc-snapshot.qt-project.org/5.0-newdocs/qtdoc/index.html

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            gbk Martin Smith (Qt)
            jerome.pasion Jerome Pasion
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes