qdoc: Fixed All Classes list

In Qt5, each class has a URL, so the test for an
empty URL fails in findAllClasses(). The test is
no longer necessary and is removed.

Task number: QTBUG-27695

Change-Id: Id3e7b17c9d68fc59340f88d1300f2a422ad2a18c
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>

cregit: 9024570d798dd67b23cdeb8a412c841c7533b1b5 https://github.com/qt/qtbase/commit/9024570d798dd67b23cdeb8a412c841c7533b1b5